--- a/docs/04_misc/_section.yml
+++ b/docs/04_misc/_section.yml
@@ -1,10 +1,10 @@
-name: 📓 Misc
-slug: misc
+- name: 📓 Misc
+  slug: misc
 
-sections:
-  - name: iOS Quirks
-    slug: ios-quirks
-    file: ios-quirks.md
+  sections:
+    - name: iOS Quirks
+      slug: ios-quirks
+      file: ios-quirks.md
 
-  - name: Youtube Channel
-    href: https://youtube.com
+    - name: Youtube Channel
+      href: https://youtube.com
