--- a/docs/04_misc/_section.yml
+++ b/docs/04_misc/_section.yml
@@ -1,10 +1,11 @@
 - name: 📓 Misc
   slug: misc
+  path: 04_misc
 
   sections:
     - name: iOS Quirks
       slug: ios-quirks
-      file: ios-quirks.md
+      path: ios-quirks.md
 
     - name: Youtube Channel
       href: https://youtube.com
