--- a/docs/01_general/_section.yml
+++ b/docs/01_general/_section.yml
@@ -1,18 +1,19 @@
 - name: 📓 General
   slug: general
+  path: 01_general
 
   sections:
     - name: Welcome to Koji
       slug: welcome
-      file: welcome.md
+      path: welcome.md
 
     - name: Getting started
       slug: getting-started
-      file: getting-started.md
+      path: getting-started.md
 
     - name: FAQ
       slug: faq
-      file: faq.md
+      path: faq.md
 
     - name: Youtube Channel
       href: https://youtube.com
