--- a/docs/04_misc/_section.yml
+++ b/docs/04_misc/_section.yml
@@ -1,4 +1,4 @@
-- name: 📓 Misc
+- name: 📓 Miscellaneous
   slug: misc
   path: 04_misc
 
@@ -7,5 +7,5 @@
       slug: ios-quirks
       path: ios-quirks.md
 
-    - name: Youtube Channel
-      href: https://youtube.com
+    - name: Koji Youtube Channel
+      href: https://www.youtube.com/channel/UCc5jM6NwVNQc7b5APigEsMw
