--- a/docs/03_miscellaneous/_section.yml
+++ b/docs/03_miscellaneous/_section.yml
@@ -3,6 +3,10 @@
   path: 03_miscellaneous
 
   sections:
+    - name: Tutorials
+      slug: tutorials
+      path: tutorials.md
+
     - name: Common issues
       slug: common-issues
       path: common_issues.md
