📦 NEW: Leaderboard Implementation guide

--- a/docs/03_miscellaneous/_section.yml
+++ b/docs/03_miscellaneous/_section.yml
@@ -11,6 +11,10 @@
       slug: common-issues
       path: common_issues.md
 
+    - name: Leaderboard Implementation
+      slug: leaderboard-guide
+      path: leaderboard.md
+
     - name: Mobile Safari quirks
       slug: mobile-safari-quirks
       path: mobile_safari_quirks.md
