Add tutorial for porting existing code

--- a/docs/04_tutorials/_section.yml
+++ b/docs/04_tutorials/_section.yml
@@ -3,6 +3,10 @@
   path: 04_tutorials
 
   sections:
+    - name: Porting Existing Code to Koji
+      slug: porting-existing-code
+      path: porting_existing_code.md
+
     - name: Adding a Service to Your Project
       slug: adding-a-service
       path: adding_a_service.md
